Fixed a issue in storm config template file that the output options are always out-of-order which will cause service reloaded.
Signed-off-by: Leon Cui <leon.cui@outlook.com>

--- a/templates/storm.yaml.erb
+++ b/templates/storm.yaml.erb
@@ -38,7 +38,7 @@ storm.messaging.transport: "<%= @storm_messaging_transport %>"
 <%=
   require 'yaml'
   @config_map.to_yaml.lines.
-    select { |s| s =~ /^[^-]{3}/ }.
+    select { |s| s =~ /^[^-]{3}/ }.sort.
     map { |s| s.sub(/^  /, '').rstrip }.
     join("\n")
 
